manifests/sample/destination-rule-east.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: helloworld-outlier-detection
  namespace: sample
spec:
  host: helloworld.sample.svc.cluster.local
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 1
      interval: 10s
      baseEjectionTime: 30s
      maxEjectionPercent: 100
