manifests/sample/fault-injection-west.yaml
# Apply this to the helloworld-v2 service to inject a fault injection filter on the remote (west) cluster.
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: helloworld-v2-chaos
  namespace: sample
spec:
  workloadSelector:
    labels:
      app: helloworld
      version: v2
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND # This is the key: intercept incoming traffic
      listener:
        portNumber: 5000
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.fault
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.fault.v3.HTTPFault
          abort:
            http_status: 503
            percentage:
              numerator: 50 # 50% failure for your test
